# skia-macos

./: .gitignore  CMakeLists.txt  README.md  README_PROTOCOL.md  UNIT_TEST_GUIDE.md  analyze_image.py  build-xcode.sh  build.md  build.sh  download_images.sh  download_sunscreen_images.sh  main.cpp  run_simple_test.sh  run_text_styles_demo.sh
docs/: PROTOCOL.md  README_TEXT_STYLES.md  TESTING.md  TEXT_RENDERING.md  TRANSFORM_SYSTEM.md
examples/: simple_example.cpp  text_styles_demo.cpp
projects/clothes/: README.md  clothes_protocol.json  translate_clothes.py
projects/clothes/original/: clothes.json
projects/cup/: README.md  cup_protocol.json  download_cup_images.sh  extract_positions.py  extract_text.py
projects/cup/original/: cup.json
projects/dessert/: dessert_protocol.json  download_dessert_images.sh  extract_positions.py  extract_text.py
projects/dessert/original/: dessert.json
projects/food/: README.md  download_food_images.sh  food_protocol.json
projects/food/original/: food.json
projects/horizontal/: README.md  download_horizontal_images.sh  extract_positions.py  extract_text.py  horizontal_protocol.json
projects/horizontal/original/: horizontal.json
projects/long/: all_urls.txt  create_correct_protocol.py  download_all_images.sh  download_long_images.sh  extract_positions.py  extract_text.py  fix_image_mapping.py  fix_protocol.py  generate_download_script.py  long_protocol.json  simple_translate.py  update_protocol.py
projects/long/original/: long.json
projects/spring/: README.md  download_spring_images.sh  spring_protocol.json
projects/spring/original/: spring.json
projects/sunscreen/: README.md  sunscreen_protocol.json
projects/sunscreen/original/: 防晒.json
projects/text_styles_protocols/: README.md  basic_font_styles.json  colors_and_transforms.json  display_modes.json  mixed_languages.json  rich_text_demo.json  rich_text_new_demo.json  spacing_comparison_demo.json  text_alignment.json  text_effects.json
projects/text_wrap_test/: README.md  TEST_RESULTS.md  auto_fit_protocol.json  multi_line_protocol.json  single_line_protocol.json  test_all_modes.sh  word_wrap_protocol.json
projects/trip/: README.md  trip_protocol.json
projects/tshirt/: translate_tshirt.py  tshirt_protocol.json
projects/tshirt/original/: tshirt.json
res/: trip.json
src/: main.cpp  protocol_parser.cpp  protocol_parser.h  universal_renderer.cpp  universal_renderer.h
src/core/: types.h
src/engine/: render_engine.cpp  render_engine.h
src/output/: image_writer.cpp  image_writer.h
src/parsers/: protocol_parser.cpp  protocol_parser.h
src/renderers/: canvas_renderer.cpp  canvas_renderer.h  image_renderer.cpp  image_renderer.h  rich_text_renderer.cpp  rich_text_renderer.h  text_layout.cpp  text_layout.h  text_renderer.cpp  text_renderer.h
src/resources/: font_manager.cpp  font_manager.h
src/utils/: color_parser.cpp  color_parser.h
tests/: README.md  simple_image_test.cpp
